=== Version 0.3.2
* Enhancements
  * Added #clear method for TextArea
  * Added support for Heading element
  * Added all of the h1 locators
  * Updated to use selenium-webdriver 2.6.0

=== Version 0.3.1 / 2011-09-08
* Enhancements
  * Updated to use watir-webdriver 0.3.3

=== Version 0.3.0 / 2011-09-04
* Enhancements
  * Changed namespace for selenium and watir to include webdriver
  * Support for locating the following elements when nested
    * Link
    * Button
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * Checkbox
    * RadioButton
    * Div
    * Span
    * Table
    * TableCell
    * Image
    * Form
    * OrderedList
    * UnorderedList
    * ListItem
  * Added #modal_dialog to PageObject to override the default modal dialog behavior
  * Changed element keys to include _webdriver
  * Updated to use selenium-webdriver 2.5.0

=== Version 0.2.5 / 2011-08-19
* Enhancements
  * #attach_to_window takes an optional block - will return to calling window after block executes
  * Added the following instance methods to PageObject via ElementLocators
    * #button_element
    * #text_field_element
    * #hidden_field_element
    * #text_area_element
    * #select_list_element
    * #link_element
    * #checkbox_element
    * #radio_button_element
    * #div_element
    * #span_element
    * #table_element
    * #cell_element
    * #image_element
    * #form_element
    * #list_item_element
    * #unordered_list_element
    * #ordered_list_element
  * Updated to use selenium-webdriver 2.4.0
  * Updated to use watir-webdriver 0.3.2

=== Version 0.2.4 / 2011-08-08
* Enhancements
  * Can now find span by :text
  * Can now find button by :value
  * Added #forward and #back methods to PageObject
  * Added #right_click and #double_click methods to Element
  * Added #value= to TextField and TextArea
  * Added #select to SelectList
  * Added #check, #uncheck, and #checked? to CheckBox
  * Added #select, #clear, and #selected? to RadioButton