@@ -90,6 +90,7 @@ module PageObject
         #
         def when_present(timeout=5)
           @element.wait_until_present(timeout)
+          self
         end
 
         #
@@ -101,6 +102,7 @@ module PageObject
           Object::Watir::Wait.until(timeout, "Element was not visible in #{timeout} seconds") do
             visible?
           end
+          self
         end
 
         #
@@ -112,6 +114,7 @@ module PageObject
           Object::Watir::Wait.while(timeout, "Element still visible after #{timeout} seconds") do
             visible?
           end
+          self
         end
 
         #
